--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "~1.0.0",
     "express": "^4.18.2",
+    "postcss": "^8.4.19",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.0",
     "react-dom": "^18.2.0",
