--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
-    "react-chatbot-kit": "^2.1.0",
+    "react-chatbot-kit": "github:OlimjonNematov/react-chatbot-kit",
     "react-dom": "^18.2.0",
+    "react-latex": "^2.0.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-tex": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
